@@ -1,6 +1,6 @@
-#' Function to draw heatmap on tree tips
+#' Function to plot heatmap given associated data on tree tips
 #'
-#' \code{xGTheatmap} is supposed to draw heatmap on tree tips.
+#' \code{xGTheatmap} is supposed to plot heatmap given associated data on tree tips. It returns an object of class "ggplot".
 #'
 #' @param gp a ggplot object resulting from ggtree
 #' @param data a data frame/matrix for coloring
@@ -31,15 +31,15 @@
 #' a ggplot object
 #' @note none
 #' @export
-#' @seealso \code{\link{xHeatmap}}
-#' @include xHeatmapAdv.r
+#' @seealso \code{\link{xGT}}
+#' @include xGTheatmap.r
 #' @examples
 #' \dontrun{
 #' # Load the XGR package
 #' library(XGR)
 #' set.seed(825)
 #' tree <- ape::rtree(50)
-#' gp <- xGGtree(tree) + ggtree::geom_tiplab(size=2)
+#' gp <- xGT(tree) + ggtree::geom_tiplab(size=2)
 #' # heatmap data
 #' x <- matrix(rnorm(length(tree$tip.label)*5), ncol=5)
 #' colnames(x) <- paste0('C',1:5)
