@@ -1,18 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Function to visualise enrichment results using a forest plot</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Function to plot a tree and its clades</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for xGT"><tr><td>xGT</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Function to visualise enrichment results using a forest plot</h2>
+<h2>Function to plot a tree and its clades</h2>
 
 <h3>Description</h3>
 
-<p><code>xGT</code> is supposed to visualise enrichment results using a forest
-plot. A point is colored by the significance level, and a horizontal
-line for the 95
-the CI, the less reliable). It returns an object of class &quot;ggplot&quot;.
+<p><code>xGT</code> is supposed to plot a tree and its clades. It returns an
+object of class &quot;ggplot&quot;.
 </p>
 
 
@@ -101,6 +99,10 @@ gp &lt;- xGT(tree)
 gp + ggtree::geom_tiplab(size=2,align=T)
 gp$data
 gp$tree
+
+# fan layout
+gp &lt;- xGT(tree, layout='fan')
+gp
 
 ## End(Not run)
 </pre>
